--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='global.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='darkmode.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='accounts_log.css') }}">
+        <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
         {% block head_scripts %}{% endblock %}
 
     </head>
@@ -35,9 +36,27 @@
                                 <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('compare') }}">Compare Plan</a></li>
                                 <li class="nav-item m-2"><a class="nav-link" href="{{ url_for('analytics') }}">Analytics</a></li>
                             </ul>
-
+                            
                             {% if session.username %}
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex align-items-center">
+                                <button class="inbox-toggle" type="button" data-bs-toggle="collapse" data-bs-target="#inboxDropdown">
+                                    <span class="inbox-icon"></span>
+                                </button>
+                                <div class="collapse inbox-collapse">
+                                    <ul class="inbox-lst ms-auto">
+                                        <li class="inbox-item dropdown">
+                                            <a class="nav-link dropdown-toggle position-relative" href="#" id="inboxDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <i class="bi bi-envelope"></i> <!-- Inbox icon -->
+                                            <span id="pending-requests-badge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                                0
+                                            </span>
+                                        </a>
+                                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="inboxDropdown" id="pending-requests-dropdown">
+                                            <li><p class="dropdown-item text-muted">No pending requests</p></li>
+                                        </ul>
+                                        </li>
+                                    </ul>
+                                </div>"
                                 <li class="nav-item mx-2">
                                     <div class="theme-switch-wrapper">
                                         <input type="checkbox" id="theme-toggle" />
